fix cards and author details not showing

--- a/backend/notice_project/frontend/src/components/NoticeBoard/noticeBoardComponent/AdminNotice.css
+++ b/backend/notice_project/frontend/src/components/NoticeBoard/noticeBoardComponent/AdminNotice.css
@@ -294,7 +294,7 @@ h6 {
   }
 }
 
-@media only screen and (min-width: 1440px) {
+@media only screen and (min-width: 960px) {
   .adminNotice-section {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
